--- a/widget/index.html
+++ b/widget/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="greeting-card">
-        <p id="good-greeting">God</p>
+        <p id="good-greeting">Good</p>
         <p id="greeting"></p>
         <div id="date"></div>
     </div>
