--- a/widget/index.html
+++ b/widget/index.html
@@ -12,6 +12,6 @@
         <p id="greeting"></p>
         <div id="date"></div>
     </div>
-    <script src="../script.js"></script>
+    <script src="widgetScript.js"></script>
 </body>
 </html>
