--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600&family=Sansita:wght@800&family=Montserrat:wght@700&display=swap">
     <title>Greetings Widget</title>
     <!-- Font Awesome Icons -->
