--- a/index.html
+++ b/index.html
@@ -44,6 +44,6 @@
         </button>
         <input type="text" id="generated-link" readonly>
     </div>
-    <script src="../src/script.js"></script>
+    <script src="src/script.js"></script>
 </body>
 </html>
