--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
 
     <div id="embedLink"></div>
 
-    <script src="customization.js"></script>
+    <script src="src/customization.js"></script>
 </body>
 </html>
