--- a/widget/index.html
+++ b/widget/index.html
@@ -7,10 +7,14 @@
     <title>Greeting Card</title>
 </head>
 <body>
-    <div class="greeting-card" id="greetingCard">
-        <div id="greetingMessage"></div>
-        <div id="currentDate"></div>
-    </div>
+    <section id="render_section">
+            
+            <div id="greeting-card" class="container">
+                <p id="good-greeting">Good</p>
+                <p id="greeting"></p>
+                <div id="date"></div>
+            </div>
+        </section>
 
     <script src="render.js"></script>
 </body>
