--- a/widget/index.html
+++ b/widget/index.html
@@ -16,6 +16,6 @@
             </div>
         </section>
 
-    <script src="render.js"></script>
+    <script src="../src/render.js"></script>
 </body>
 </html>
