--- a/widget/index.html
+++ b/widget/index.html
@@ -15,6 +15,6 @@
         <p id="greeting"></p>
         <div id="date"></div>
     </div>
-    <script src="widget.js"></script>
+    <script src="src/widget.js"></script>
 </body>
 </html>
