--- a/index.html
+++ b/index.html
@@ -15,15 +15,11 @@
         <p>Created by Ellie Gons</p>
     </div>
 
-
-    <section id="render_section">
-            <div id="greeting-card" class="container">
-                <p id="good-greeting">Good</p>
-                <p id="greeting"></p>
-                <div id="date"></div>
-            </div>
-        </section>
-    
+    <div id="greeting-card">
+        <p id="good-greeting">Good</p>
+        <p id="greeting"></p>
+        <div id="date"></div>
+    </div>
     <div id="bottom-container">
         <input type="text" id="user-name" placeholder="Type a name...">
 
