--- a/widget/index.html
+++ b/widget/index.html
@@ -3,10 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Sansita:ital,wght@0,400;0,700;0,800;0,900;1,400;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Greetings Widget</title>
-    
+    <style>
+        #greeting-card {
+            width: auto;
+            margin: 30px auto;
+            background-color: transparent;
+            padding: 5px 20px 20px;
+            text-align: left;
+        }
+
+        #good-greeting {
+            font-family: 'Sansita', sans-serif;
+            font-weight: 800;
+            font-size: 28px;
+            margin-bottom: -32px;
+        }
+
+        #greeting {
+            font-family: 'Sansita', sans-serif;
+            font-weight: 800;
+            font-size: 28px;
+            margin-bottom: 10px;
+        }
+
+        #date {
+            font-family: 'Montserrat', sans-serif;
+            font-size: 10px;
+            font-weight: 700;
+            opacity: 0.8;
+        }
+    </style>
 </head>
 <body>
     <div id="greeting-card">
@@ -14,6 +42,40 @@
         <p id="greeting"></p>
         <div id="date"></div>
     </div>
-    <script src="../src/widget.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            // Parse query parameters to get user name and color
+            var urlParams = new URLSearchParams(window.location.search);
+            var userName = urlParams.get('user') || 'Muffin'; // Default to 'Muffin' if user name not provided
+            var color = urlParams.get('color') || '#B89F89'; // Default color to Brown if not provided
+
+            // Update greeting, date, and link elements
+            document.getElementById('greeting').textContent = getGreeting(new Date().getHours()) + ', ' + userName + '!';
+            document.getElementById('date').textContent = getDateInfo(new Date());
+
+            // Update greeting card styles
+            var greetingCard = document.getElementById('greeting-card');
+            greetingCard.style.color = color; // Update text color
+            greetingCard.style.borderColor = color; // Update border color
+        });
+
+        // Function to get the current greeting
+        function getGreeting(hour) {
+            if (hour >= 5 && hour < 12) {
+                return 'morning';
+            } else if (hour >= 12 && hour < 18) {
+                return 'afternoon';
+            } else {
+                return 'evening';
+            }
+        }
+
+        // Function to get the current date information
+        function getDateInfo(date) {
+            var dayOfWeek = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
+            var monthNames = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'];
+            return dayOfWeek[date.getDay()] + ', ' + date.getDate() + ' ' + monthNames[date.getMonth()] + ' ' + date.getFullYear();
+        }
+    </script>
 </body>
 </html>
