--- a/widget/index.html
+++ b/widget/index.html
@@ -8,9 +8,10 @@
     <style>
         #greeting-card {
             width: auto;
-            margin: 30px auto;
+            display: flex;
+            flex-direction: row;
             background-color: transparent;
-            padding: 5px 20px 20px;
+            overflow: hidden;
             text-align: left;
         }
 
