--- a/widget/index.html
+++ b/widget/index.html
@@ -7,8 +7,7 @@
     <title>Greetings Widget</title>
     <style>
         #greeting-card {
-            width: auto;
-            
+            top: 0%;
             background-color: transparent;
             overflow: hidden;
             text-align: left;
