--- a/widget/index.html
+++ b/widget/index.html
@@ -7,6 +7,7 @@
     <title>Greetings Widget</title>
     <style>
         #greeting-card {
+            position: absolute;
             top: 0%;
             background-color: transparent;
             overflow: hidden;
