--- a/widget/index.html
+++ b/widget/index.html
@@ -8,6 +8,7 @@
     <style>
         #greeting-card {
             display: flex;
+            flex-direction: column;
             position: absolute;
             top: 0%;
             background-color: transparent;
