--- a/widget/index.html
+++ b/widget/index.html
@@ -10,7 +10,7 @@
             display: flex;
             flex-direction: column;
             position: absolute;
-            top: 0%;
+            top: -2em;
             background-color: transparent;
             overflow: hidden;
             text-align: left;
