--- a/widget/index.html
+++ b/widget/index.html
@@ -6,10 +6,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Sansita:ital,wght@0,400;0,700;0,800;0,900;1,400;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Greetings Widget</title>
     <style>
+        body {
+            margin-bottom: 2px;
+        }
         #greeting-card {
             position: absolute;
             top: -1em;
-            margin-bottom: 2px;
             background-color: transparent;
             overflow: hidden;
             text-align: left;
