--- a/widget/index.html
+++ b/widget/index.html
@@ -7,7 +7,7 @@
     <title>Greetings Widget</title>
     <style>
         body {
-            margin-bottom: 2px;
+            height: 50px;
         }
         #greeting-card {
             position: absolute;
