--- a/widget1/index.html
+++ b/widget1/index.html
@@ -65,7 +65,7 @@
             var hour = new Date().getHours();
             var greetingText = document.getElementById('greeting');
             var greeting = getGreeting(hour);
-            greetingText.textContent = greeting + ', ' + userName + '!';
+            greetingText.textContent = greeting + ', ' + userName;
         }
 
         // Update greeting every minute (adjust interval as needed)
